# ocaml-onnxruntime

./: .gitignore  README.md  dune-project  onnxruntime.opam
src/c/: dune  ort_shim.c  ort_shim.h
src/lib/: dune  onnxruntime.ml  onnxruntime.mli  ort_shim.c  ort_shim.h  ort_stubs.c
test/: dune  gen_mandelbrot_model.py  gen_minimal_model.py  gen_pi_model.py  main.ml  mandelbrot.onnx  minimal.onnx  pi.onnx
